# apple-platform-rs

./: Cargo.toml
xcode-tools/: Cargo.toml
xcode-tools/src/: xcrun.rs
