[package]
name = "xcode-tools"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
license = "MIT OR Apache-2.0"
description = "Apple xcode tools reimplemented in Rust"
keywords = ["apple", "xcode"]
homepage = "https://github.com/indygreg/apple-platform-rs"
repository = "https://github.com/indygreg/apple-platform-rs.git"
readme = "README.md"

[[bin]]
name = "xcrun"
path = "src/xcrun.rs"

[dependencies]
serde = { version = "1.0.207", default-features = false, features = ["derive"] }
clap = { version = "4.5.15", features = ["derive"] }
toml = "0.8.19"
